fixed spacing around the border

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ html {
 
 body {
   background-image: linear-gradient(to bottom, #ff9500, #ff5e3a);
-  background-color: #ff9500;
 }
 
 i {
@@ -22,6 +21,12 @@ h1, h2, p, a {
 
 .btn {
   color: #fff;
+  border-color: #fff;
+}
+
+.btn:hover {
+  color: #ff9500;
+  background-color: #fff;
   border-color: #fff;
 }
 
